adding build command

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "start": "gulp dev",
+    "build": "jekyll build",
     "dev": "concurrently 'npm:watch-scripts' 'npm:start' ",
     "watch-scripts": "gulp scripts",
     "postinstall": "gulp dev:install"
