--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,7 @@
 name: CI
-on: [push]
+on:
+  pull_request:
+    types: [assigned, opened, synchronize, reopened]
 jobs:
   lhci:
     name: Lighthouse
@@ -7,23 +9,22 @@ jobs:
     steps:
       - name: 📂 setup
         uses: actions/checkout@v2
-
       - name: 💎 setup ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.6.2
-
-      - name: 🔨 install dependencies & build site
-        uses: limjh16/jekyll-action-ts@v2
-        with:
-          enable_cache: true
-          jekyll_src: src
       - name: setup Node
         uses: actions/setup-node@v1
         with:
           node-version: '12.x'
       - name: Install Global packages
-        run: npm install -g @lhci/cli@0.4.x
+        run: npm install -g @lhci/cli@0.4.x purgecss
+      - name: 🔨 install dependencies & build site
+        uses: limjh16/jekyll-action-ts@v2
+        with:
+          enable_cache: false
+          jekyll_src: src
+          custom_opts: JEKYLL_ENV=production --trace
       - name: run Lighthouse CI
         run: |
           lhci autorun
