--- a/.lighthouserc.json
+++ b/.lighthouserc.json
@@ -1,7 +1,7 @@
 {
   "ci": {
     "collect": {
-      "staticDistDir": "./_site"
+      "staticDistDir": "./dist/site"
     },
     "assert": {
       "assertions": {
