--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,8 @@ jobs:
         with:
           enable_cache: true
           jekyll_src: src
-          custom_opts: JEKYLL_ENV=production --trace
+
+          custom_opts: JEKYLL_ENV=production --trace --destination /dist/site
       - name: run Lighthouse CI
         run: |
           lhci autorun
