--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "concurrently": "^5.1.0",
+    "countup.js": "^2.0.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "remixicon": "^2.4.0"
@@ -28,7 +29,7 @@
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "@babel/register": "^7.9.0",
-    "@cloudcannon/suite": "2.0.0-rc7",
+    "@cloudcannon/suite": "^2.0.1",
     "babel-loader": "^8.1.0",
     "gulp": "^4.0.2",
     "patch-package": "^6.2.2",
